# xhup-club-api

./: .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  config.py  docker-compose.yml  docker-entrypoint.py  pyproject.toml  requirements.txt  run.py  secrets.tar.enc  test-config.yaml
app/: __init__.py  main.py
app/api/: __init__.py  article.py  articles.py  character.py  comp_article.py  comp_articles.py  relation.py  session.py  user.py  users.py  xhup.py
app/events/: __init__.py  bind_group.py  bot.py  qq_group.py  web.py
app/models/: __init__.py  article.py  chaiwubi_user.py  character.py  characters.py  group_user.py  main_user.py  qq.py  user.py  word.py
app/service/: __init__.py
app/tasks/: __init__.py  base.py  corns.py
app/utils/: __init__.py  captcha.py  common.py  db.py  text.py  web.py
cli/: __init__.py
config/: __init__.py  base.py  dev.py  prod.py  test.py
data/: 小鹤全部单字.txt  常用单字前1500.txt
docs/: README.md  config.md  db-migrate.md  user-flow.md
docs/message/: message.md
migrations/: env.py
migrations/versions/: 0253176ac39b_.py  4c2df9e4956e_.py  75c03fa5228c_.py  92dd687058e4_.py  9801944cdc91_.py  9c80538546bd_user_table.py  b7e2af16c544_.py  be9e8ae40412_.py  dbcab7591378_.py  e64efd84a332_.py  e6c99a6c3071_.py  e8622f4e915b_.py  eabdb9a82715_character.py  f7b97400a6d9_.py  fb10da98f200_.py
scripts/: deploy.sh  docker-compose.yml  reload.sh
tests/: api-test-session.http  conftest.py
tests/api/: __init__.py  api-test.http  test_character.py  test_comp_article.py  test_user_session.py
tests/resources/: 青铜葵花.txt
(+33 files in other folders)
